One more usecase: - styles from subdirectories compiled into file in styles folder

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="styles/widgets/widget.css">
     <link rel="stylesheet" href="styles/widgets/common/common.css">
     <!-- endbuild -->
+    <!-- build:css({.tmp,app}) styles/additional.css -->
+    <link rel="stylesheet" href="styles/additionals/main.css">
+    <link rel="stylesheet" href="styles/additionals/common/common.css">
+    <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/views/views.css -->
     <link rel="stylesheet" href="styles/views/views.css">
     <link rel="stylesheet" href="styles/views/common/common.css">
@@ -40,6 +44,12 @@
 
     <div class="test-item views-common">9</div>
     <div class="test-item views-common-sub">10</div>
+
+    <div class="test-item additionals-styles">11</div>
+    <div class="test-item additionals-styles-sub">12</div>
+
+    <div class="test-item additionals-common">13</div>
+    <div class="test-item additionals-common-sub">14</div>
 
   </body>
 </html>
